Add more instructions to Readme. Remove old jar files