@@ -1,35 +1,33 @@
 # IconGenerator
 
-## Important
+## Added Java FX 11 support
 
-We are switching to java jdk 11 and JavaFX11, so a lot of things are not working currently. We hope to solve this soon. 
+Finally we added support for JavaFX and Java 11 to our project.
 
 ---
-
 Icon Sizes Generator it´s a program that can be use to generate the icons for your app in iOS and Android.
 
 The input image  it´s recomendable to be a .png and a 1024x1024 originial size for better results.
 
-We are not responsible for possible problems in your system, you accept the program as it is.
+## How to use
 
-Java 1.8 it´s required.
+Tested with Netbeans 11, OpenJDK `openjdk 11.0.1 2018-10-16 OpenJDK Runtime Environment 18.9 (build 11.0.1+13) OpenJDK 64-Bit Server VM 18.9 (build 11.0.1+13, mixed mode)`, JavaFX SDK 11.0.2 and MacOS Mojave.
 
-Javafx it´s requiered too.
+Clone the netbeans project. Once you open it, make sure to configure the project with Java FX correctly, for more information, check this [link](https://openjfx.io/openjfx-docs/#install-javafx)
+
+Then build and run the project. If everything was configured correctly, the app will start.
+
+To run it inside the command line use the next command: 
+
+`java  --module-path /Path/To/javafx-sdk-11.0.1/lib --add-modules=javafx.controls,javafx.fxml -jar "/Path/to/IconGeneratorBeta081.jar"`
+
+Normally, the jar file is generated in the dist folder after build it in Netbeans.
 
 Installers no more supported.
 
-Now we use the app itself, like an .app for macOS and a .exe for windows (available soon). For linux based system you can use java -jar in terminal to execute the jar file. The jar file is always available.
+For more questions, contact with [me](https://twitter.com/FlaviusStan_Dev).
 
-## Beta Phase 0.8.1
+## Knowing Issues
 
-Solving a bug that not allow to use "New Image" button in Windows platforms.
-
-## Beta Phase 0.8.0
-
-New features:
-
-Add "New Image" button that allows you to create another iconset with other image without 
-clossing manually the app. This button will delete your current work if it wasn´t exported.
-
-For any issue contact with https://twitter.com/FlaviusStan_Dev
+The minimize button currently not working.
 
